# immediate-tiny-strings

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Makefile.am  README.md  configure.ac
docs/: Doxyfile.in  Makefile.am
src/: Makefile.am  basic.c  its.h
test/: Makefile.am  alloc_free.c  conversion.c  modify_cstring.c
